【update】重构！！ 1. 后端通过 replace 的方式引用 ..\shared-models 中的公共模块； 2. 修复各个 handlers 中的 swagger 注释问题；生成方法改成： swag init -g cmd/server/main.go -o docs --parseDependency --parseInternal 3. gitlab 改成容器方式，虚机+AD域模式在当前开发机器环境不太稳定。
